Tracking working. Still multiple issues

--- a/lib/booktype/apps/edit/templates/edit/aloha_header.html
+++ b/lib/booktype/apps/edit/templates/edit/aloha_header.html
@@ -6,6 +6,9 @@
 <script src="{% static "edit/js/aloha/lib/vendor/jquery-1.7.2.js" %}"></script>
 <script src="{% static "edit/js/findAndReplaceDOMText/findAndReplaceDOMText.js" %}"></script>
 
+<link rel="stylesheet" href="{% static 'edit/js/ice/ice.css' %}" type="text/css">
+<script src="{% static 'edit/js/ice.js' %}"></script>
+
 <script>
   Aloha = window.Aloha || {};
 
@@ -174,4 +177,7 @@
                             booktype/findandreplace,
                             booktype/imagesimple,
                             booktype/simpletable,
+                            booktype/icejs,
                             booktype/bookpaste"></script>
+
+<script src="http://code.jquery.com/jquery-migrate-1.0.0.js"></script>
